--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -32,16 +32,16 @@ eleventyNavigation:
         <!--                 Blog Articles                -->
         <!-- ============================================ -->
 
-        {% if collections.post | length == 0 %}
+        {% if collections.blogpost | length == 0 %}
             <h1>No Recent Posts</h1>
         {% endif %}
-        {%- for post in collections.post | reverse -%}
+        {%- for blogpost in collections.blogpost | reverse -%}
             <article class="recent-articles">
                 <!--Main Article Image-->
                 <picture class="blog-mainImage">
                     <img
-                        src="{{ post.data.image }}"
-                        alt="{{ post.data.imageAlt }}"
+                        src="{{ blogpost.data.image }}"
+                        alt="{{ blogpost.data.imageAlt }}"
                         width="795"
                         height="400"
                         decoding="async"
@@ -60,18 +60,18 @@ eleventyNavigation:
               decoding="async"
 />
                         </picture>
-                        <span class="blog-author">{{ post.data.author }}</span>
+                        <span class="blog-author">{{ blogpost.data.author }}</span>
                         <span aria-hidden="true" class="blog-dot"></span>
                         <!--Blog Date-->
-                        <span class="blog-date">{{ post.date | postDate }}</span>
+                        <span class="blog-date">{{ blogpost.date | postDate }}</span>
                     </div>
                     <h2 class="blog-h1">
-                        {{ post.data.blogTitle }}
+                        {{ blogpost.data.blogTitle }}
                     </h2>
                     <p class="blog-desc">
-                        {{ post.data.blogDescription }}
+                        {{ blogpost.data.description }}
                     </p>
-                    <a href="{{ post.url }}" class="blog-link">Continue Reading</a>
+                    <a href="{{ blogpost.url }}" class="blog-link">Continue Reading</a>
                 </div>
             </article>
         {%- endfor -%}
