--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -32,7 +32,7 @@ eleventyNavigation:
       <div class="cs-content">
         <h2 class="cs-title">Get in Touch</h2>
         <p class="cs-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ridiculus elementum ullamcorper ipsum porttitor aliquam. Id magna urna ultrices odio pulvinar. Sed ut.
+                    Contact David McElwee for any questions, comments, or business.
                 </p>
       </div>
       <label>
