--- a/src/pages/myafterlife.html
+++ b/src/pages/myafterlife.html
@@ -55,7 +55,9 @@ eleventyNavigation:
         reader will reflect on their own life, shaped by important (and unimportant) 
         events and decisions, leading them to ask, “What if…?”
       </p>
-      <a href="" class="button-solid">Get a Copy</a>
+      <a href="https://www.amazon.com/My-Afterlife-David-McElwee/dp/B0BVX74YHR/ref=sr_1_1?crid=3FG7QS1HSS1U2&keywords=David+mcelwee+my+afterlife&qid=1677096594&s=books&sprefix=david+mcelwee+my+afterlife%2Cstripbooks%2C82&sr=1-1" class="button-solid">Amazon</a>
+      <a href="https://www.barnesandnoble.com/w/my-afterlife-david-mcelwee/1143076021?ean=9798887631790" class="button-solid">B&N</a>
+      <a href="https://books.apple.com/us/book/my-afterlife/id6445899136" class="button-solid">Apple</a>
     </div>
   </div>
 </section>
