--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@ layout: 'base.html'
 description: 'Meta description for the page'
 metaTitle: 'Title that shows up on google searches'
 tagTitle: 'Pixel Perfect Websites'
-preloadImg: '/images/landing-1920w.webp'
+preloadImg: '/images/smethport-hero-1920w.webp'
 preloadCSS: '/css/local.css'
 permalink: '/'
 eleventyNavigation:
