--- a/src/pages/Events.html
+++ b/src/pages/Events.html
@@ -16,7 +16,7 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-    <h1 id="home-h">Blog</h1>
+    <h1 id="home-h">Events</h1>
     {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
 </section>
 
