--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 ---
 layout: 'base.html'
-description: 'Meta description for the page'
-metaTitle: 'Title that shows up on google searches'
-tagTitle: 'Pixel Perfect Websites'
+description: 'David McElwee, author of My Afterlife'
+metaTitle: 'David McElwee, author of My Afterlife'
+tagTitle: 'Home'
 preloadImg: '/images/smethport-hero-1920w.webp'
 preloadCSS: '/css/local.css'
 permalink: '/'
@@ -26,7 +26,7 @@ eleventyNavigation:
       <h1 class="cs-title">My Afterlife</h1>
       <p class="cs-text"> Discover the enduring power of kindness in the heartwarming tale of how one person's actions changed a small town forever.
       </p>
-      <a href="" class="cs-button-solid">Learn More</a>
+      <a href="/myafterlife" class="cs-button-solid">Learn More</a>
     </div>
   </div>
 
@@ -51,7 +51,7 @@ eleventyNavigation:
       <p class="cs-text">
        David McElwee was born and raised in Northwest Pennsylvania. He earned a B.S. from the University of Pittsburgh and an M.S. in clinical psychology from the University of La Verne. During his career, he has worked to build bridges past barriers in supporting people living with developmental disabilities. My Afterlife is his first novel. 
       </p>
-      <a href="/about" class="button-solid">Contact</a>
+      <a href="/contact" class="button-solid">Contact</a>
     </div>
   </div>
 </section>
@@ -76,8 +76,8 @@ eleventyNavigation:
       <p class="cs-text"> 
         My Afterlife is a novel set in Smethport, Pennsylvania. It arrives just in time to celebrate the towns 170th birthday. Coincidently, the novel ends following the extraordinary fireworks capping Smethport’s 150th birthday. My Afterlife is an inside view of a little- known story in which a truth was learned by the friends gathered at the cemetery while the towns citizens surrounded the lake enjoying the arial light show closing the sesquicentennial twenty years ago!
       </p>
-      <a href="" class="button-solid">Learn More</a>
-      <a href="" class="button-solid">Get a Copy</a>
+      <a href="/myafterlife" class="button-solid">Learn More</a>
+      <a href="https://a.co/d/8H7BR6K"   class="button-solid">Get a Copy</a>
     </div>
   </div>
 </section>
@@ -86,20 +86,8 @@ eleventyNavigation:
 <!-- ============================================ -->
 <!--             Final Call to Action             -->
 <!-- ============================================ -->
+ {% include "newsletter.html" %}
 
-<section id="cta">
-  <div class="container">
-    <h2 class="title">
-      Subscribe to <br/>
-      Our Newsletter!
-    </h2>
-    <p>
-      Subscribe to our newsletter and be the first to know about new releases, upcoming events, and exclusive content from David Mcelwee and My Afterlife!
-    </p>
-    <a href="/contact" class="button-solid">Subscribe</a>
-  </div>
-  {% image './src/images/smethport-hero.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
-</section>
 
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 <script>
