--- a/src/pages/Events.html
+++ b/src/pages/Events.html
@@ -1,8 +1,8 @@
 ---
 layout: 'base.html' 
-description: "Meta description for the page"
-metaTitle: 'Title that shows up on social OG tags'
-tagTitle: 'Title that shows up on google, and is concatenated with | {{ client.name }}'
+description: 'David McElwee Events'
+metaTitle: 'David McElwee Events'
+tagTitle: 'Events'
 preloadImg: '/images/imageName.format'
 preloadCSS: '/css/events.css'
 permalink: 'events/'
