--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: 'base.html'
-description: 'Meta description for the page'
-metaTitle: 'Title that shows up on google searches'
+description: 'Contact David McElwee'
+metaTitle: 'Contact David McElwee'
 tagTitle: 'Contact'
 preloadImg: '/images/cabinets2-1920w.webp'
 preloadCSS: '/css/contact.css'
@@ -50,9 +50,6 @@ eleventyNavigation:
       <button class="cs-button-solid" type="submit">Submit Message</button>
     </form>
     <div class="cs-right-section">
-      <!--Email-->
-      <span class="cs-header">Email</span>
-      <a class="cs-link" href="mailto:support@yourdomain.com">support@yourdomain.com</a>
       <!-- Background Image-->
       {% image './src/images/skyscraper.jpg', 'building', '', 'lazy'%}
     </div>
