--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: 'base.html'
-description: 'Meta description for the page'
-metaTitle: 'Title that shows up on google searches'
+description: 'David McElwee Blog'
+metaTitle: 'David McElwee Blog'
 tagTitle: 'Blog'
 preloadImg: '/images/cabinets2-1920w.webp'
 preloadCSS: '/css/blog.css'
