New Logo + CTA Edit

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@ eleventyNavigation:
 <section id="hero">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/cover3.png', 'mountains', 'cs-picture1', 'eager', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+      {% image './src/images/cover3.png', 'Cover of David McElwees book My Afterlife', 'cs-picture1', 'eager', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
     </div>  
     <div class="cs-flex-group">
       <span class="cs-topper">Available Now</span>
@@ -31,7 +31,7 @@ eleventyNavigation:
   </div>
 
   <!-- Background Image -->
-  {% image './src/images/smethport-hero.jpg', 'mountains', 'cs-picture', 'eager', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/smethport-hero.jpg', 'Birds eye view of Smethport PA in the fall', 'cs-picture', 'eager', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -42,7 +42,7 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/portrait.jpg', 'house', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/portrait.jpg', 'Portrait image of Dave McElwee', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
@@ -64,7 +64,7 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/cover-mock-thick.png', 'house', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/cover-mock-thick.png', 'Mock cover of My Afterlife', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
