New Logo + CTA Edit

--- a/src/pages/myafterlife.html
+++ b/src/pages/myafterlife.html
@@ -15,7 +15,7 @@ eleventyNavigation:
 <!-- ============================================ -->
 <section id="int-hero">
   <h1 id="home-h">My Afterlife</h1>
-  {% image './src/images/smethport-hero.jpg', 'cabinets', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/smethport-hero.jpg', 'Birds eye view of Smethport PA in the fall', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -26,7 +26,7 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/cover-mock-thick.png', 'house', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/cover-mock-thick.png', 'Mock cover of My Afterlife', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
@@ -144,8 +144,30 @@ eleventyNavigation:
         <span class="name">Joan S.</span>
       </div>
     </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Excellent first effort by the Author. Looking forward to more memories with a mystery tales.
+                </p>
+      <div class="star-group">
+        <span class="name">Earnie B.</span>
+      </div>
+    </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Brought tears to my eyes more than once.
+                </p>
+      <div class="star-group">
+        <span class="name">Betty S.</span>
+      </div>
+    </div>
   </div>
-  <a aria-label="Read an Exerpt" href="https://read.amazon.com/kp/embed?asin=B0BWZ54VN5&preview=newtab&linkCode=kpe&ref_=cm_sw_r_kb_dp_5TXZE9TJMWGBRC8BCPNRs" target="_blank" rel="noopener noreferrer" class="button-solid">Read an Exerpt</a>
+  <a aria-label="Read an Exerpt" href="https://read.amazon.com/kp/embed?asin=B0BWZ54VN5&preview=newtab&linkCode=kpe&ref_=cm_sw_r_kb_dp_5TXZE9TJMWGBRC8BCPNRs" class="button-solid">Read an Exerpt</a>
   <a aria-label="Join Our Newsletter to Recieve Updates" href="#cta" class="button-solid">Join Our Newsletter</a>
 </section>
 
