--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/portrait.jpg', 'Portrait image of Dave McElwee', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/Dave.jpg', 'Portrait image of Dave McElwee', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
