--- a/src/pages/Events.html
+++ b/src/pages/Events.html
@@ -3,7 +3,7 @@ layout: 'base.html'
 description: 'David McElwee Events'
 metaTitle: 'David McElwee Events'
 tagTitle: 'Events'
-preloadImg: '/images/imageName.format'
+preloadImg: '/images/Embroidery-1920w.webp'
 preloadCSS: '/css/events.css'
 permalink: 'events/'
 eleventyNavigation:
@@ -17,7 +17,7 @@ eleventyNavigation:
 
 <section id="int-hero">
     <h1 id="home-h">Events</h1>
-    {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
+    {% image './src/images/Embroidery.jpg', 'Embroidery of the bicycle book bag', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
