--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -3,7 +3,7 @@ layout: 'base.html'
 description: 'David McElwee Blog'
 metaTitle: 'David McElwee Blog'
 tagTitle: 'Blog'
-preloadImg: '/images/cabinets2-1920w.webp'
+preloadImg: '/images/Pen-1920w.webp'
 preloadCSS: '/css/blog.css'
 permalink: 'blog/'
 eleventyNavigation:
@@ -18,7 +18,7 @@ eleventyNavigation:
 
 <section id="int-hero">
     <h1 id="home-h">Blog</h1>
-    {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
+    {% image './src/images/Pen.jpg', 'cabinets', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
