--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -19,7 +19,7 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">Contact David McElwee</h1>
-  {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/Products.jpg', 'Items of sentimental value to David', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -51,7 +51,7 @@ eleventyNavigation:
     </form>
     <div class="cs-right-section">
       <!-- Background Image-->
-      {% image './src/images/skyscraper.jpg', 'building', '', 'lazy'%}
+      {% image './src/images/Dave.jpg', 'Portrait image of Dave McElwee', 'cs-picture cs-picture1', 'lazy'%}
     </div>
   </div>
 </section>
