adding my accidental investigation

--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,14 @@ eleventyNavigation:
 <section id="hero">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/cover3.png', 'Cover of David McElwees book My Afterlife', 'cs-picture1', 'eager', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+      {% image './src/images/my-accidental-investigation-mock.png', 'Cover of David McElwees book My Accidental Investigation', 'cs-picture1', 'eager', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
     </div>  
     <div class="cs-flex-group">
-      <span class="cs-topper">Available Now</span>
-      <h1 class="cs-title">My Afterlife</h1>
-      <p class="cs-text"> Discover the enduring power of kindness in the heartwarming tale of how one person's actions changed a small town forever.
+      <span class="cs-topper">New Release!</span>
+      <h1 class="cs-title">My Accidental Investigation</h1>
+      <p class="cs-text">A dying psychologist and unlikely allies unite to stop a predatory funeral director, discovering how random lives mysteriously converge to end evil.
       </p>
-      <a href="/myafterlife" class="cs-button-solid">Learn More</a>
+      <a href="/my-accidental-investigation" class="cs-button-solid">Learn More</a>
     </div>
   </div>
 
@@ -64,20 +64,17 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/cover-mock-thick.png', 'Mock cover of My Afterlife', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/my-accidental-investigation-mock.png', 'Mock cover of My Accidental Investigation', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
       <span class="cs-topper">New Release!</span>
-      <h2 class="cs-title">My Afterlife</h2>
+      <h2 class="cs-title">My Accidental Investigation</h2>
       <p class="cs-text">
-        My Afterlife unwraps the story of small-town friends as though watching them through a rotating kaleidoscope. Together they face emotional ups and downs but none more profound than the blunt force trauma of watching another’s kaleidoscope cease to rotate.
+        A dying psychologist, a traumatized postal worker, and a twelve-year-old girl with Down syndrome unite to stop a predatory funeral director's decades-long crimes. Triggered by a mysterious question about Life Savers, their convergence reveals how seemingly random lives intertwine. This darkly humorous magical realism tale explores hidden dangers and unexpected connections.
       </p>
-      <p class="cs-text"> 
-        My Afterlife is a novel set in Smethport, Pennsylvania. It arrives just in time to celebrate the towns 170th birthday. Coincidently, the novel ends following the extraordinary fireworks capping Smethport’s 150th birthday. My Afterlife is an inside view of a little- known story in which a truth was learned by the friends gathered at the cemetery while the towns citizens surrounded the lake enjoying the arial light show closing the sesquicentennial twenty years ago!
-      </p>
-      <a href="/myafterlife" class="button-solid">Learn More</a>
-      <a href="https://a.co/d/8H7BR6K"   class="button-solid">Get a Copy</a>
+      <a href="/my-accidental-investigation" class="button-solid">Learn More</a>
+      <a href="https://a.co/d/1es1zQZ"   class="button-solid">Get a Copy</a>
     </div>
   </div>
 </section>
