--- a/src/pages/myafterlife.html
+++ b/src/pages/myafterlife.html
@@ -8,7 +8,8 @@ preloadCSS: '/css/myafterlife.css'
 permalink: 'myafterlife/'
 eleventyNavigation:
     key: My Afterlife
-    order: 300
+    parent: Books
+    order: 301
 ---
 <!-- ============================================ -->
 <!--                    LANDING                   -->
